Revision history for {{$dist->name}}

{{$NEXT}}
  - Switch to https instead of http

0.06      2019-07-01 19:45:44 -0400
  - Update to download tarball for most recent version
    (0.17.0.0-beta)

0.05      2018-11-30 11:15:15 -0500
  - Important documentation of limitations of the SDK.
  - Include LICENSE file in share install Oops.

0.04      2018-09-04 08:46:09 -0400
  - Simplify detection logic

0.03      2018-08-28 05:57:45 -0400
  - Extra diagnostics

0.02      2018-08-23 11:39:47 -0400
  - Refuse to install on platforms other than x86_64-linux

0.01      2018-08-22 05:28:02 -0400
  - initial version