@@ -6,7 +6,7 @@ copyright_year   = 2018
 version          = 0.06
 
 [@Author::Plicease]
-:version       = 2.44
+:version       = 2.47
 travis_status  = 1
 release_tests  = 1
 installer      = Author::Plicease::MakeMaker
@@ -38,3 +38,5 @@ remove = List::Util
 
 [Author::Plicease::Upload]
 cpan = 1
+
+[Deprecated]
